NOJIRA: Removing extra closing curly-brace added during prior edit.

--- a/src/main/webapp/defaults/css/cspace.css
+++ b/src/main/webapp/defaults/css/cspace.css
@@ -2009,4 +2009,4 @@ input[type=button].cs-mediaUploader-removeMedia:focus {
     text-overflow:ellipsis;
     -o-text-overflow:ellipsis;
     white-space: nowrap;
-}}
+}
