CSPACE-4391: Changing Place type in Advanced search to a select list.

--- a/src/main/webapp/defaults/html/components/SearchFieldsTemplate-place.html
+++ b/src/main/webapp/defaults/html/components/SearchFieldsTemplate-place.html
@@ -15,7 +15,7 @@
                         <div class="label csc-place-placeType-label"></div>
                     </div>
                     <div class="content clearfix">
-                        <input type="text" class="csc-place-placeType"/>
+                        <select class="csc-place-placeType input-select"><option value="">Options not loaded</option></select>
                     </div>        
                 </div>
                 <div class="info-pair">
