--- a/src/main/webapp/defaults/html/components/SearchFieldsTemplate-place.html
+++ b/src/main/webapp/defaults/html/components/SearchFieldsTemplate-place.html
@@ -18,6 +18,7 @@
                         <select class="csc-place-placeType input-select"><option value="">Options not loaded</option></select>
                     </div>        
                 </div>
+                <!-- Nested field breaking advanced search so incorrect selector given for now to disable. Fix after merge with 2.2-ish master -->
                 <div class="info-pair">
                     <div class="header">
                         <div class="label csc-place-name-label"></div>
@@ -26,6 +27,7 @@
                         <input type="text" class="csc-place-name"/>
                     </div>        
                 </div>
+                <!-- Nested field breaking advanced search so incorrect selector given for now to disable. Fix after merge with 2.2-ish master -->
                 <div class="info-pair">
                     <div class="header">
                         <div class="label csc-place-owner-label"></div>
